[tool.poetry]
name = "checksums"
version = "0.1.0"
description = "Python REST API to upload large files and generate checksums"
authors = ["Jordy van Vorselen <jordyvanvorselen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
behave = "^1.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
